--- a/style.css
+++ b/style.css
@@ -119,10 +119,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-left: 120px;
 }
 
-#calender {
+/* #calender {
     min-height: 18px;
     width: 100%;
-}
+} */
 
 @media screen and ( min-width: 600px ) {
     h1 {
