--- a/style.css
+++ b/style.css
@@ -119,10 +119,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-left: 120px;
 }
 
-/* #calender {
-    min-height: 18px;
-    width: 100%;
-} */
+.calender-wrapper {
+    display: flex;
+    background-color: white;
+    border-radius: 30px;
+}
 
 @media screen and ( min-width: 600px ) {
     h1 {
