--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: flex;
     background-color: white;
     border-radius: 30px;
+    height: 50px;
 }
 
 @media screen and ( min-width: 600px ) {
