--- a/style.css
+++ b/style.css
@@ -120,11 +120,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-left: 120px;
 }
 
+.paypal-form-input {
+    min-height: 44px;
+}
+
 .calender-wrapper {
     display: flex;
     background-color: var(--color-slight-gray);
     border-radius: 30px;
-    min-height: 44px;
+}
+
+#calender {
+    width: 100%;
+    height: 100%;
 }
 
 #calender {
