--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1 {
 .paypal-form-input select {
     font-family: "Montserrat", sans-serif;
     width: 100%;
+    min-height: 44px;
     border-style: none;
     outline: none;
     padding: 0.7rem 0.5rem;
@@ -77,6 +78,7 @@ h1 {
 .paypal-form-input input {
     font-family: "Montserrat", sans-serif;
     width: 92%;
+    min-height: 44px;
     border-style: none;
     outline: none;
     padding: 0.7rem 0.5rem;
