--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 input[type="date"]::-webkit-date-and-time-value {
-    padding: 5rem;
+    padding: 1.5rem 100%;
 }
 
 /* .paypal-form-input {
