--- a/style.css
+++ b/style.css
@@ -119,7 +119,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 input[type="date"]::-webkit-date-and-time-value {
-    padding: 1.5rem 100%;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
+    padding-right: 200px;
 }
 
 /* .paypal-form-input {
