--- a/style.css
+++ b/style.css
@@ -129,23 +129,32 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     min-height: 44px;
 } */
 
-/* .calender-wrapper {
+.people-wrapper {
     display: flex;
+    align-items: center;
+    min-height: 2.4rem;
+    background-color: white;
+    border-radius: 30px;
+}
+
+.calender-wrapper {
+    display: flex;
+    align-items: center;
+    min-height: 2.4em;
     background-color: var(--color-slight-gray);
     border-radius: 30px;
-    padding: 0.7rem 0;
-} */
+}
 
 #calender {
     background-color: var(--color-slight-gray);
 }
 
-input[type="date"] {
+/* input[type="date"] {
     display: block;
     -webkit-appearance: textfield;
     -moz-appearance: textfield;
     min-height: 1.2em;
-}
+} */
 
 @media screen and ( min-width: 600px ) {
     h1 {
